prevent wrapping on status column

--- a/src/app/torrents-table/torrents-table.component.scss
+++ b/src/app/torrents-table/torrents-table.component.scss
@@ -196,9 +196,7 @@ mat-header-row {
     word-wrap: break-word;
     word-break: break-word;
 
-    // justify-content: center;
-
-    min-width: 140px;
+    min-width: 150px;
     margin-left: 10px;
     margin-right: 10px;
 
@@ -258,7 +256,7 @@ mat-header-row {
     word-wrap: break-word;
     word-break: break-word;
 
-    min-width: 180px;
+    min-width: 160px;
 }
 
 .mat-column-Added-On {
